# TEAM12

./: README.md  noxfile.py  pyproject.toml  record_sim.py  test_direction.py  test_stand.py
.github/workflows/: ci.yaml
examples/: __init__.py
examples/bipedal_stairs/: __init__.py  run.py
examples/bipedal_stairs/communication/: layer.py  zmq_transport.py
examples/bipedal_stairs/control/: __init__.py  cpg_controller.py  ctrl_node.py  stair_controller.py
examples/bipedal_stairs/sim/: __init__.py  bipedal_robot.xml  environment.py  sim_node.py  stairs_env.xml
simulator/: controller.py  dynamics.py  m.py  main.py  objects.py  physics.py  renderer.py  world.py
simulator/dynamics/: ab_algorithm.py
simulator/spatial/: example.py  se.py  so.py
src/simulator/: renderer.py  world.py
tests/: test_cpg_controller.py  test_pid_and_renderer.py  test_zmq_transport.py
