[project]
name = "bipedal-stairs"
version = "0.2.0"
description = "Bipedal robot stair-climbing simulation in MuJoCo with ZeroMQ control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0",
    "numpy>=1.24",
    "pyzmq>=25.0",
    "imageio[ffmpeg]>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "nox>=2023.4",
]

[project.scripts]
bipedal-run = "examples.bipedal_stairs.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["examples", "src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
unfixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
